# simple-detr

./: .gitignore  LICENSE  README.md  detr.py  main.py  pyproject.toml  requirements.txt
