[tool.poetry]
name = "detr-test"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.5.0"
torchvision = "^0.6.0"
Pillow = "^8.1.1"
numpy = "^1.18.4"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
scipy = "^1.4.1"
typer = "^0.2.1"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
